<resources>
    <string name="app_name">Pokedex</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="register">R E G I S T E R      S I T E</string>
    <string name="confirm">confirm</string>
    <string name="poke_logo_description">confirm</string>


    <string name="shop_title">Pokeballs</string>
    <string name="shop_total">TOTAL:</string>
    <string name="pokeball_title">Pokeball</string>
    <string name="pokeball_price">200</string>
    <string name="superball_title">Superball</string>
    <string name="superball_price">500</string>
    <string name="ultraball_title">Ultraball</string>
    <string name="ultraball_price">1500</string>
    <string name="masterball_title">Masterball</string>
    <string name="masterball_price">100.000</string>
    <string name="buttonBuy">Buy</string>
    <string name="ShopTitle">LS POKEMON SHOP</string>
    <string name="back_button_description" />
    <string name="login">Login</string>
    <string name="TitleTrainer">TRAINER</string>
    <string name="clichiere">click here to register</string>
    <string name="buscandu">Buscar Pokemon</string>
    <string name="close">Logout</string>
    <string name="hp_stats">Hp %1$d/255</string>
    <string name="attack_stats">Attack %1$d/255</string>
    <string name="defense_stats">Defense %1$d/255</string>
    <string name="special_attack_stats">Special Attack %1$d/255</string>
    <string name="special_defense_stats">Special Defense %1$d/255</string>
    <string name="speed_stats">Speed %1$d/255</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="title_activity_capture_activity.java">CaptureActivity.java</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_use">Use</string>
    <string name="btn_escape">Escape</string>


</resources>